- Container scan now emits adapter metadata/signals plus adapter artifacts using the same deterministic contract as safe-run adapters.
- Container scan evidence remains local-only inspect data and excludes unstable fields (timestamps/raw env/path values).
- Container scan now requires immutable image digest refs (`name@sha256:...` or `sha256:...`) and fails closed on mutable tag refs.
- Privacy lint coverage now includes wildcard `analysis/*.json` artifacts so new adapter JSON outputs cannot bypass privacy scanning by filename drift.
- Wave coverage now includes:
- Wave 1: archives, packages/installers, extensions
- Wave 2 baseline: IaC/CICD and document risk signal extraction
- Wave 3 baseline: container/source/signature/image evidence lanes
- Core/runtime trust hardening sweep applied in release scope (digest/trust/runtime path updates, host verification flow updates, and aligned fixture/contract updates).
- Builder integration surface explicitly supported: `weftend export-json <outRoot> --format normalized_v0` emits deterministic `weftend.normalizedSummary/0` output for downstream tools (see docs/POWERED_BY_WEFTEND.md).
- Shortcut scan accuracy fix for .lnk targets: report and compare now resolve the actual target script/program instead of effectively classifying the shell host.
- Baseline decision flow hardening for CHANGED/BLOCKED runs in Launchpad paths (accept/decline prompt reliability and gating behavior).
- Native report viewer workflow is the default operator path; Notepad is no longer the primary report UX.
- Report viewer startup hardened: host console launches hidden while the report viewer opens in normal visible state for review.
- Launchpad History UX improvements: direct View Report action and keyboard open behavior (double-click/Enter).
- New bind/unbind right-click flow:
- Bind to WeftEnd and Unbind from WeftEnd verbs for files, shortcuts, and folders.
- .lnk rewrap mode preserves icon and stores an original shortcut backup for safe restoration.